fixes issue with blue button text on ios safari

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ button {
     font-weight: 500;
     padding: 12px;
     font-size: 1em;
+    color: #333;
     background-color: #dadaf9;
     border-radius: 4px;
     border: 2px solid #333;
